--- a/cv.html
+++ b/cv.html
@@ -11,7 +11,7 @@
     <!-- ===== Sidebar (Menu de Navigation) ===== -->
     <aside class="sidebar">
         <div class="sidebar-header">
-            <img src="images/Bienvenu.jpg" alt="Photo de TOVIDAKOU Bienvenu" class="profile-pic">
+            <img src="./bienvenu.jpg" alt="Photo de TOVIDAKOU Bienvenu" class="profile-pic">
             <h2 class="profile-name">TOVIDAKOU Bienvenu</h2>
         </div>
         <nav class="main-nav">
@@ -83,4 +83,5 @@
     </main>
   </div>
 </body>
+
 </html>
